Rewrite rendering engine to include interpolation for smoother animations